crates/action/tests/probes/missing_trigger_source.stderr
error[E0046]: not all trait items implemented, missing: `Source`
  --> tests/probes/missing_trigger_source.rs:38:1
   |
38 | impl TriggerAction for BadTrigger {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `Source` in implementation
   |
   = help: implement the missing item: `type Source = /* Type */;`
